--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <div class="nav-links" id="navLinks">
                 <i class="fas fa-times" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">MUSIC</a></li>
-                    <li><a href="">STORE</a></li>
-                    <li><a href="">CONTACT US</a></li> 
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="index.html">MUSIC</a></li>
+                    <li><a href="index.html">STORE</a></li>
+                    <li><a href="index.html">CONTACT US</a></li> 
                 </ul>
             </div>
             <i class="fas fa-bars" onclick="showMenu()"></i>
@@ -77,7 +77,7 @@
     <section class="cta">
         <h3>"Tigran Hamasyan merges ancient Armenian sacred music with jazz piano." <br>
             New York Times</h2>
-        <a href="" class="hero-btn">STORE</a>
+        <a href="index.html" class="hero-btn">STORE</a>
     </section>
 
     <footer>
