--- a/index.html
+++ b/index.html
@@ -20,20 +20,19 @@
                 <i class="fas fa-times" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="index.html">MUSIC</a></li>
-                    <li><a href="index.html">STORE</a></li>
-                    <li><a href="index.html">CONTACT US</a></li> 
+                    <li><a href="music.html">MUSIC</a></li>
+                    <li><a href="biography.html">BIOGRAPHY</a></li>
+                    <li><a href="contact.html">CONTACT US</a></li> 
                 </ul>
             </div>
             <i class="fas fa-bars" onclick="showMenu()"></i>
         </nav>
-
         <div class="text-box">
             <h1>Tigran Hamasyan</h1>
-            <p>"Tigran has found a way to keep improvisation fresh and lyrical.
-                Other jazz musicians would be wise to take note"</p>
-               <p class="author">Guardian</p>
-               <!--<a class="hero-btn" href="">More About</a>-->
+            <p>Tigran has found a way to keep improvisation fresh and lyrical.
+               Other jazz musicians would be wise to take note</p>
+            <p class="author">Guardian</p>
+            <!--<a class="hero-btn" href="">More About</a>-->
         </div>
     </header>
 
@@ -48,7 +47,6 @@
            improvisations often contain embellishments based on scales from Middle Eastern/South Western Asian traditions.</p>
     </section>
 
-
     <section class="banner"></section>
 
     <section class="discography">
@@ -56,21 +54,21 @@
     
         <div class="row">
             <div class="discography-col">
-                <img src="images/An Ancient Observer.jpg" alt="An Ancient Observer">
+                <img src="images/An Ancient Observer.jpeg" alt="An Ancient Observer">
                 <h3>An Ancient Observer</h3>
                 <p>An Ancient Observer is the 8th album by Tigran Hamasyan released 31 March 2017.
                     Two of the tracks on the album are developments of traditional Armenian melodies
                     and all tracks have influences from Armenian folk music.</p>
             </div>
             <div class="discography-col">
-                <img src="images/Mockroot.jpg" alt="Mockroot">
+                <img src="images/Mockroot.jpeg" alt="Mockroot">
                 <h3>Mockroot</h3>
                 <p>Mockroot is the sixth album by Tigran Hamasyan, released 17 February 2015.
                     The album mixes traditional Armenian folk music (and other styles such as 
                     Rock and Minimalism) with jazz, in the jazz fusion style.</p>
             </div>
             <div class="discography-col">
-                <img src="images/A Fable.jpg" alt="A Fable">
+                <img src="images/A Fable.jpeg" alt="A Fable">
                 <h3>A Fable</h3>
                 <p>A Fable is the fourth album by Tigran Hamasyan released in February 2011.
                     Tigran uses traditional Armenian hymns, Armenian poetry and Armenian folk
@@ -83,7 +81,7 @@
     <section class="cta">
         <h3>"Tigran Hamasyan merges ancient Armenian sacred music with jazz piano." <br>
             New York Times</h2>
-        <a href="index.html" class="hero-btn">STORE</a>
+        <a href="biography.html" class="hero-btn">BIOGRAPHY</a>
     </section>
 
     <footer>
